feat(s3stream): add a third party package `moe.cnkirito.kdio` (#654)
Signed-off-by: Ning Yu <ningyu@automq.com>